- MFH: Fix bug #47399 (mb_check_encoding() return true for some illegal SJIS   charcters)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@275894 c90b9560-bf6c-de11-be94-00142212c4b1